notebook update: added comments and example

--- a/notebooks/iomega-workflow-1-from_mgf_to_cleaned_data.ipynb
+++ b/notebooks/iomega-workflow-1-from_mgf_to_cleaned_data.ipynb
@@ -12769,13 +12769,15 @@
    "source": [
     "### 3) Complete metadata using pubchem lookup routines\n",
     "Try to complete and extend metadata based on looking for matches in PubChem. Found matches on PubChem will be accepted if:\n",
-    "+ Single matching extry for InchiKey (first 14 characters)\n",
-    "+ Single matching extry for Inchi\n",
-    "+ Single matching extry for Smiles\n",
+    "+ **Single matching extry** for InchiKey (first 14 characters)\n",
+    "+ **Single matching extry** for Inchi\n",
+    "+ **Single matching extry** for Smiles\n",
     "+ Matching name AND inchikey\n",
     "+ Matching name AND inchi\n",
     "+ Matching molecular formula AND inchi or inchikey\n",
-    "+ Single matching entry with same name AND molecular weight == parent mass."
+    "+ **Single matching entry** with same name AND molecular weight == parent mass.\n",
+    "\n",
+    "### Carefull: when comparing InchiKeys we here look at the first 14 characters only. So stereo-chemistry is ignored."
    ]
   },
   {
@@ -14151,6 +14153,132 @@
     "count_annotations(reference_spectrums[:20000])\n",
     "print(\"--- after pubchem lookups:\")\n",
     "count_annotations(reference_spectrums_lookup)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Closer look at example that was changed based on name + parent mass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "614\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, spec in enumerate(reference_spectrums_lookup[2000:3000]):\n",
+    "    log_entry = spec.get(\"lookup_completion\")\n",
+    "    if log_entry:\n",
+    "        print(i)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### before pubchem lookup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pepmass': [545.0, None],\n",
+       " 'charge': 1,\n",
+       " 'mslevel': '2',\n",
+       " 'source_instrument': 'LC-ESI-Ger',\n",
+       " 'filename': '20111105_Jenia_Ger_Scytonemin_MH_545_qb.1.1..mgf',\n",
+       " 'seq': '*..*',\n",
+       " 'notes': '',\n",
+       " 'ionmode': 'positive',\n",
+       " 'organism': 'GNPS-LIBRARY',\n",
+       " 'name': 'Scytonemin M+H',\n",
+       " 'smiles': '',\n",
+       " 'inchi': '',\n",
+       " 'inchiaux': 'N/A',\n",
+       " 'libraryquality': '1',\n",
+       " 'spectrumid': 'CCMSLIB00000001550',\n",
+       " 'activation': 'CID',\n",
+       " 'instrument': 'ion trap',\n",
+       " 'title': 'Scan Number: 1',\n",
+       " 'scans': '1',\n",
+       " 'adduct': 'M+H',\n",
+       " 'parent_mass': 543.9927235480093,\n",
+       " 'inchikey': ''}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reference_spectrums[2614].metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### after pubchem lookup\n",
+    "--> New metadata added and log entry: ``'lookup_completion': 'Match by name and molecular mass'`` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pepmass': [545.0, None],\n",
+       " 'charge': 1,\n",
+       " 'mslevel': '2',\n",
+       " 'source_instrument': 'LC-ESI-Ger',\n",
+       " 'filename': '20111105_Jenia_Ger_Scytonemin_MH_545_qb.1.1..mgf',\n",
+       " 'seq': '*..*',\n",
+       " 'notes': '',\n",
+       " 'ionmode': 'positive',\n",
+       " 'organism': 'GNPS-LIBRARY',\n",
+       " 'name': 'Scytonemin M+H',\n",
+       " 'smiles': 'C1=CC=C2N=C\\\\3C(=C(C(=O)/C3=C/C4=CC=C(C=C4)O)C5=C6C(=NC7=CC=CC=C67)/C(=C\\\\C8=CC=C(C=C8)O)/C5=O)C2=C1',\n",
+       " 'inchi': 'InChI=1S/C36H20N2O4/c39-21-13-9-19(10-14-21)17-25-33-29(23-5-1-3-7-27(23)37-33)31(35(25)41)32-30-24-6-2-4-8-28(24)38-34(30)26(36(32)42)18-20-11-15-22(40)16-12-20/h1-18,39-40H/b25-17+,26-18+',\n",
+       " 'inchiaux': 'N/A',\n",
+       " 'libraryquality': '1',\n",
+       " 'spectrumid': 'CCMSLIB00000001550',\n",
+       " 'activation': 'CID',\n",
+       " 'instrument': 'ion trap',\n",
+       " 'title': 'Scan Number: 1',\n",
+       " 'scans': '1',\n",
+       " 'adduct': 'M+H',\n",
+       " 'parent_mass': 543.9927235480093,\n",
+       " 'inchikey': 'CGZKSPLDUIRCIO-RPCRKUJJSA-N',\n",
+       " 'lookup_completion': 'Match by name and molecular mass'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reference_spectrums_lookup[2614].metadata"
    ]
   },
   {
